Continue work on UI

--- a/src/index.html
+++ b/src/index.html
@@ -3,32 +3,40 @@
   <head>
     <meta charset="utf-8" />
     <title>::RememberMe::</title>
-  </head>
-  <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200;400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><body>
     <header>
-      <h1>::Remember Me::</h1>
+      <h1>::RM::</h1>
+      <p class="promo">Simple Todo App to plan your day.</p>
     </header>
     <main>
-      <h2>::Tasks</h2>
-      <ul id="projects">
-        <li class="default-proj" ><span class="chosen-proj" proj-id="0">Default</span></li>
-      </ul>
-      <button id="new-proj">+</button>
-      <input id="new-task-input" type="text" /><button id="new-task-add">+</button>
-      <select id="priority" name="priority">
-        <optgroup label="Priority">
-          <option value="Low">~</option>
-          <option value="Medium">!</option>
-          <option value="High">!!!</option>
-        </optgroup>
-      </select>
-      <button id="date-picker">D</button>
-      <div id="date-selector" class="hidden">
-        <button id="date-today">@Today</button>
-        <button id="date-tomorrow">@Tomorrow</button>
-        <input type="date" id="date" />
-      </div>
-      <ul id="task-list"></ul>
+      <section class="tasks">
+        <h2>::Tasks</h2>
+        <input id="new-task-input" type="text" /><button id="new-task-add">+</button>
+        <select id="priority" name="priority">
+          <optgroup label="Priority">
+            <option value="Low">~</option>
+            <option value="Medium">!</option>
+            <option value="High">!!!</option>
+          </optgroup>
+        </select>
+        <button id="date-picker">D</button>
+        <div id="date-selector" class="hidden">
+          <button id="date-today">@Today</button>
+          <button id="date-tomorrow">@Tomorrow</button>
+          <input type="date" id="date" />
+        </div>
+        <ul id="task-list"></ul>
+      </section>
+      <section class="sidebar">
+        <h2>::Lists</h2>
+        <ul id="projects">
+          <li class="default-proj"><span class="chosen-proj" proj-id="0">Default</span></li>
+        </ul>
+        <button id="new-proj"><span class="material-symbols-outlined">add</span></button>
+      </section>
     </main>
   </body>
 </html>
